<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#14736B"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNoticia_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/Noticia_1"
                android:textSize="22sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/Noticia_1_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNoticia_1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Noticia_1_2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNoticia_1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/Noticia_1_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNoticia_1_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Noticia_1_4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNoticia_1_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:gravity="left"
                android:text="@string/Noticia_1_5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNoticia_1_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Noticia_1_6"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvNoticia_1_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Noticia_1_7"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnLike_Noticia_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#14736B"
                android:text="@string/Like_Noticia_1"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnRegresar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#14736B"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:text="@string/btnRegresar3"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>