<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#14736B"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:id="@+id/tvEmpresa1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvEmpresa1"/>

            <TextView
                android:id="@+id/tvRetiro1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvRetiro1" />

            <Button
                android:id="@+id/btnVerEmaus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnVerEmaus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:id="@+id/tvEmpresa2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvEmpresa2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvRetiro1" />

            <Button
                android:id="@+id/btnVerChilenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnVerChilenter"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:id="@+id/tvEmpresa3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvEmpresa3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvRetiro1" />

            <Button
                android:id="@+id/btnVerRecicleapp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnVerReciclapp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:id="@+id/tvEmpresa4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvEmpresa4"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/tvRetiro1" />

            <Button
                android:id="@+id/btnVerHope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnVerHope"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnRegresar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#14736B"
                android:textColor="@color/white"
                android:text="@string/btnRegresar2"/>


        </LinearLayout>






    </LinearLayout>





</RelativeLayout>