<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#14736B"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmpresa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tvEmpresa1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/tvDescripcion1"/>

            <TextView
                android:id="@+id/tvRetiro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="Retiro a domicilio. Reciben donación para transportar los electrodomécticos" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnLlamarEmaus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="#14736B"
                android:textColor="@color/white"
                android:text="@string/btnLlamarEmaus"/>

            <Button
                android:id="@+id/btnWebEmaus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#14736B"
                android:textColor="@color/white"
                android:text="@string/btnWebEmaus"/>

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#14736B"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:text="@string/btnRegresar"/>

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>