<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#14736B"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tvIniciarSesion"
            android:text="@string/tvIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etNombre"
                android:hint="@string/etNombre"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/icono_usuario"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPasswordSesion"
                android:hint="@string/etPasswordSesion"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/icono_password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresarSesion"
            android:text="@string/btnIngresarSesion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#14736B"
            android:layout_marginTop="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>