<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">





    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#14736B"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/icono_usuario"
                android:drawablePadding="10dp"
                android:hint="@string/etNombre"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="10dp"
                android:hint="@string/etCorreo"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etConfContra"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:hint="@string/etConfContra"
                android:inputType="textPassword"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar1"
            android:text="@string/btnRegistrar1"
            android:layout_marginTop="15dp"
            android:backgroundTint="#14736B"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>
