<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#14736B"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="Noticias"/>


            <Button
                android:id="@+id/btnIrNoticia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnIrNoticia"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="Lista de empresas"/>



            <Button
                android:id="@+id/btnIrEmpresas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#14736B"
                android:text="@string/btnIrEmpresas"/>

        </LinearLayout>



    </LinearLayout>







</RelativeLayout>